# Unity-ImGUI-Android

./: build.sh
src/: CMakeLists.txt  hooks.cpp  main.cpp  utils.cpp
src/imgui/: imgui.cpp  imgui.h  imgui_additional.h  imgui_impl_android.cpp  imgui_impl_android.h
src/includes/: hooks.h  utils.h
